--- a/blognote.html
+++ b/blognote.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>El titulo del post</title>
+        <title>Bienvenido a Hyperblog La nueva era</title>
         <link rel="stylesheet" href="estilos/estilos.css" />
     </head>
     <body>
