--- a/blognote.html
+++ b/blognote.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de Master de siempre</span>
+                <span id="tagline">Tu blog de Master de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -17,7 +17,7 @@
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
-                Realizado por Cristian Jimenez V 2022. Copyright
+                Realizado por Cristian Jimenez V 2022 Copyright.
             </div>
         </div>
     </body>
