Pagina del Bobo hpta Schnaider, No publicar al Master

--- a/blognote.html
+++ b/blognote.html
@@ -1,24 +1,23 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Estudio ciencitifico, Schnaider Sarria Bobo Hpta</title>
         <link rel="stylesheet" href="estilos/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
-                <span id="tagline">Tu blog de Master de confianza</span>
+                El Chupa Cotuflas 3000
+                <span id="tagline">Schniader Bobo Setenta Hpta</span>
             </div>
             <div id="post">
-                <h1>Conviertete en un programador Python exitoso y sal del monto ...</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/beer.png" width="100%" /></p>
+                <h1>Porque Schnaider Sarria es un bobo HPTA, que le cae mal a todo el mundo? </h1>
+                <p>Tambien abordaremos porque el bobo hpta de Schnaider envidia a mi novia y a mi. Por nuestra relacion perfecta.</p>
+                <p><img src="imagenes/beer.png" width="90%" /></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p> 
                 <p>Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
-                <img id="logo2" src="imagenes/python2.png" />
             </div>
             <div id="footer">
                 Realizado por Cristian Jimenez V 2022 Copyright.
