--- a/blognote.html
+++ b/blognote.html
@@ -14,11 +14,11 @@
             <div id="post">
                 <h1>Conviertete en un programador Python exitoso y sal del monto ...</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="https://i.ibb.co/L92jsVk/beer.png" alt="beer" border="0" width="100%" /></p>
+                <p><img src="https://i.ibb.co/L92jsVk/beer.png" alt="beer" border="0" width="80%"/></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.</p> 
                 <p>Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
-                <p><img src="https://i.ibb.co/b75znCv/python2.webp" alt="python2" border="0" width="100%" /></p>
+                <p><img src="https://i.ibb.co/cwpBJVq/python2-0.png" alt="python2" border="0" width="100%" /></p>
             </div>
             <div id="footer">
                 Realizado por Cristian Jimenez V 2022 Copyright.
